--- a/portfolio/portfolio.css
+++ b/portfolio/portfolio.css
@@ -13,45 +13,35 @@
     color: #ffcc00; /* Оранжевый цвет */
 }
 
-
 .product-card {
-    display: inline-block; /* Размещаем карточки в строку */
-    border: 1px solid #000; /* Цвет и толщина рамки */
-    padding: 20px; /* Отступы внутри рамки */
-    margin-right: 20px; /* Отступ между карточками */
-    margin-bottom: 20px; /* Отступ между рядами */
-    vertical-align: top; /* Выравниваем карточки по верхнему краю */
+    display: inline-block;
+    border: 1px solid #ffcc00;
+    padding: 20px;
+    margin-right: 20px;
+    margin-bottom: 20px;
+    vertical-align: top;
+    box-sizing: border-box;
 }
 
 .product-card img {
-    margin-right: 10px; /* Отступ между иконками */
+    margin-right: 10px;
 }
+
 .product-card h2 {
-    margin-bottom: 10px; /* Отступ между названием и видео */
+    margin-bottom: 10px;
 }
 
-.product-card .product-video {
-    margin-top: 10px; /* Отступ между названием и видео */
-}
-
+.product-card .product-video,
 .product-card .product-audio {
-    margin-top: 10px; /* Отступ между описанием и аудио */
+    margin-top: 10px;
 }
-
-/* Добавьте следующий CSS в portfolio.css */
-
-/* Обновленные стили для центрирования иконок */
 
 .social-icons {
-    display: flex; /* Располагаем иконки в строку */
-    justify-content: center; /* Центрируем их по горизонтали */
-    align-items: center; /* Центрируем их по вертикали */
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .social-icons a {
-    margin: 0 5px; /* Добавляем небольшие отступы между иконками */
+    margin: 0 5px;
 }
-
-
-
-
