--- a/menu/menu.css
+++ b/menu/menu.css
@@ -1,4 +1,3 @@
-/* styles.css */
 .menu {
     position: fixed;
     top: 50%;
@@ -32,6 +31,7 @@
     position: relative;
     transition: transform 0.2s ease;
 }
+
 
 .icon::before {
     content: '';
@@ -79,6 +79,7 @@
     display: none; /* Скрыть подсказку по умолчанию */
 }
 
-.active .tooltip {
+.icon:hover .tooltip {
     display: block;
 }
+
