--- a/menu/menu.css
+++ b/menu/menu.css
@@ -32,6 +32,7 @@
     transition: transform 0.2s ease;
 }
 
+
 .icon::before {
     content: '';
     position: absolute;
@@ -68,16 +69,20 @@
 .tooltip {
     position: absolute;
     top: 50%;
-    right: 80px;
-    margin-right: 10px;
+    right: 80px; /* Изменено с left на right */
+    margin-right: 10px; /* Добавлен отступ справа */
     transform: translateY(-50%);
     background-color: rgb(72, 99, 126);
     color: #ffd700;
     padding: 5px 10px;
     border-radius: 5px;
-    display: none;
+    display: none; /* Скрыть подсказку по умолчанию */
 }
 
-.icon:hover .tooltip {
+.active .tooltip {
     display: block;
 }
+
+
+
+
